Fix timeline, sidebars on mobile

--- a/src/css/page.less
+++ b/src/css/page.less
@@ -142,6 +142,7 @@ main {
 
     @media @mobile {
       margin-left: 0;
+      width: 100%;
     }
   }
 
